--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,11 +14,11 @@
   display: none;
 }
 
-#wall .parent #tag-5.slick{
+#wall div.parent #tag-5.slick{
   display: none;
 }
 
-#wall div.parent div:last-child #tag-6{
+#wall div.parent div:last-child div#tag-6{
   display: none;
 }
 
