--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,10 +18,10 @@
   display: none;
 }
 
-#wall div.parent div:last-child div#tag-6{
+body div#wall div.parent div:last-child div#tag-6{
   display: none;
 }
 
- div#wall div.parent div > #tag-7.slick {
+body div#wall div.parent div > #tag-7.slick {
   display: none;
 }
