--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,24 +2,26 @@
   display: none;
 }
 
-#wall #tag-2 {
+#wall div#tag-2 {
   display: none;
 }
 
-#wall #tag-3.slick {
+#wall #tag-3.slick.wicked {
   display: none;
 }
 
-#wall #tag-4{
+#wall .parent #tag-4{
   display: none;
 }
 
-#wall .parent #tag-5.slick{
+#wall div.parent div#tag-5.slick{
   display: none;
 }
 
-#wall div.parent div:last-child #tag-6{
+body div#wall div.parent div:last-child div#tag-6{
   display: none;
 }
 
-#wall div.parent div > #tag-7.slick{}
+body div#wall div.parent div:first-child > div#tag-7.slick {
+  display: none;
+}
